revive desmesne shared library