@@ -29,39 +29,35 @@
             <artifactId>model</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.yupiik.logging</groupId>
-            <artifactId>yupiik-logging-jul</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-jdk14</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.graalvm.sdk</groupId>
             <artifactId>graal-sdk</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+        </dependency>
+
+        <!-- Test only deps below this line -->
+
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>assemble-all</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <descriptors>
-                                <descriptor>assembly/assembly.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -122,6 +118,15 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>
+                                -agentlib:native-image-agent=config-merge-dir=src/main/resources/META-INF/native-image,access-filter-file=src/test/resources/filter.json,caller-filter-file=src/test/resources/filter.json
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
                         <extensions>true</extensions>
@@ -142,121 +147,30 @@
                             <sharedLibrary>true</sharedLibrary>
                             <buildArgs>
                                 <buildArg>-Djava.awt.headless=true</buildArg>
-                                <buildArg>
-                                    -Djava.util.logging.manager=io.yupiik.logging.jul.YupiikLogManager
-                                </buildArg>
-                                <buildArg>--enable-preview</buildArg>
+                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
+                                <buildArg>-H:+BuildReport</buildArg>
+                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
                                 <buildArg>--enable-http</buildArg>
                                 <buildArg>--no-fallback</buildArg>
                                 <buildArg>--add-modules java.sql.rowset</buildArg>
-                                <buildArg>--initialize-at-build-time=org.jooq</buildArg>
-                                <buildArg>
-                                    --initialize-at-build-time=javax.sql.rowset.RowSetProvider
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-build-time=org.slf4j.LoggerFactory
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-build-time=org.bouncycastle
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-build-time=org.slf4j.jul.JDK14LoggerAdapter
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.handler.ssl.BouncyCastleAlpnSslUtils
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=org.jooq.impl.Convert$_JSON
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=org.jooq.tools.Convert
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=org.jooq.impl.Convert$_XML
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=org.jooq.impl.DefaultRenderContext
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.util.AbstractReferenceCounted
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.channel.epoll
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.channel.kqueue
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.channel.unix.Errors
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.channel.unix.IovArray
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.channel.unix.Limits
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=io.netty.channel.unix.Socket
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=com.hellblazer.delos.domain.Demesne
-                                </buildArg>
-                                <buildArg>
-                                    --initialize-at-run-time=org.h2.store.fs.FilePath
-                                </buildArg>
-                                <buildArg>
-                                    --trace-object-instantiation=com.fasterxml.jackson.databind.ObjectMapper
-                                </buildArg>
-                                <buildArg>
-                                    --trace-object-instantiation=org.slf4j.jul.JDK14LoggerAdapter
-                                </buildArg>
-                                <buildArg>
-                                    --trace-class-initialization=jakarta.xml.bind.ContextFinder
-                                </buildArg>
-                                <buildArg>
-                                    --trace-class-initialization=org.slf4j.MDC
-                                </buildArg>
-                                <buildArg>
-                                    --trace-class-initialization=io.netty.channel.DefaultFileRegion
-                                </buildArg>
-                                <buildArg>
-                                    --trace-class-initialization=io.netty.channel.kqueue.KQueue
-                                </buildArg>
-                                <buildArg>
-                                    --trace-class-initialization=io.netty.util.AbstractReferenceCounted
-                                </buildArg>
-                                <buildArg>
-                                    --trace-class-initialization=io.netty.channel.epoll.Native
-                                </buildArg>
-                                <buildArg>
-                                    -H:+AllowDeprecatedBuilderClassesOnImageClasspath
-                                </buildArg>
-                                <buildArg>-H:+BuildReport</buildArg>
-                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-                                <!--                                <buildArgs>-H:+StrictImageHeap</buildArgs>-->
-                                <buildArgs>--enable-sbom</buildArgs>
-                                <buildArgs>-march=native</buildArgs>
+                                <buildArg>--allow-incomplete-classpath</buildArg>
+                                <buildArg>--enable-sbom</buildArg>
+                                <buildArg>--enable-monitoring=jfr</buildArg>
+                                <buildArg>-Ob</buildArg>
+                                <buildArg>-march=native</buildArg>
+                                <buildArg>--initialize-at-build-time=javax.sql.rowset.RowSetProvider</buildArg>
+                                <buildArg>--initialize-at-run-time=org.h2.store.fs.FilePath</buildArg>
                             </buildArgs>
-                            <verbose>false</verbose>
+                            <verbose>true</verbose>
                             <metadataRepository>
                                 <enabled>true</enabled>
                             </metadataRepository>
-                            <classpath>
-                                <param>
-                                    ${project.build.directory}/${project.artifactId}-${project.version}-graalvm-jar-with-dependencies.jar
-                                </param>
-                            </classpath>
                         </configuration>
                         <dependencies>
                             <dependency>
                                 <groupId>org.graalvm.buildtools</groupId>
                                 <artifactId>graalvm-reachability-metadata</artifactId>
                                 <version>${native.maven.plugin.version}</version>
-                                <classifier>repository</classifier>
-                                <type>zip</type>
                             </dependency>
                         </dependencies>
                     </plugin>
